Fix for issue #3 -  footer stays at bottom of visible page

--- a/src/main/webapp/public/css/dukecon.css
+++ b/src/main/webapp/public/css/dukecon.css
@@ -303,15 +303,17 @@ div.room span, div.time span {
     padding-bottom: 30px;
 }
 
-.footer-wrapper {
-    position:relative;
-    height: 30px;
-    clear:both;
-}
-
 .footer {
+    background: white;
+    bottom: 0;
+    font-size: smaller;
+    padding:0.5em;
+    margin:0;
+    position: fixed;
     text-align: center;
-    margin-top: 10px;
+    width: 100%;
+    z-index: 1005; /* side-menu has 1000 */
+    box-shadow: 0px 0px 4px -2px #000000;
 }
 
 /* FAVOURITES */
